--- a/index.html
+++ b/index.html
@@ -10,14 +10,31 @@
 </head>
 
 <body>
-<h1>
-    Etch a Sketch Project
-</h1>
-<div class="container">
-    
+    <h1>
+        Etch a Sketch Project
+    </h1>
+    <div class="container">
+        <div class="options">
+            <div>
+                <label>
+                    Grid Size
+                </label>
+                <input type="number" name="grid-size" value="2" min="2" max="40" step="1" style="width: 100px;"
+                    id="grid-size">
+            </div>
+            <div><label"> Pick your Color: 
+                    <label for="gray">Gray </label><input type="radio" checked name="colorPicker" id="gray">
+                     <label for="green">Green </label><input type="radio" name="colorPicker" id="green">
+                    <label for="rainbow">Rainbow</label><input type="radio" name="colorPicker" id="rainbow"></label>
+            </div>
 
-</div>
-<script src="./js/app.js"></script>
+            </datalist>
+        </div>
+        <div class="grid-container">
+
+        </div>
+    </div>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
